tests/fixtures/invalid/same-qubit-cnot.ket
qubit q[2]
CNOT q[0], q[0]
